# cv-generator

./: .gitignore  README.md  ai_service.py  config.py  main.py  pyproject.toml  render.yaml  requirements.txt  utils.py
services/: ai_service.py  cache_service.py  github_service.py  pdf_service.py
