[project]
name = "curriculum-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "redis>=7.4.0",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.53.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
